[tests] Fix most tests, redo rating, review, recommendation controllers